cmock: check file location
- Also use specific versions

Closes #6

Signed-off-by: Martin Schröder <info@swedishembedded.com>

--- a/west.yml
+++ b/west.yml
@@ -10,9 +10,9 @@ manifest:
   projects:
     - name: cmock
       path: modules/test/cmock
-      revision: f65066f15d8248e6dcb778efb8739904a4512087
+      revision: v2.5.3
       remote: throwtheswitch
     - name: unity
       path: modules/test/cmock/vendor/unity
-      revision: 1958b977019c3ac19bb83350f7b26e60cbeb6c75
+      revision: v2.5.2
       remote: throwtheswitch
